--- a/style.css
+++ b/style.css
@@ -7,63 +7,58 @@
 }
 
 body { min-width: 375px; }
-
-.content { background: #1c1a19; }
-
 .header {
   display: flex;
   justify-content: space-between;
   background: #3c3a39;
   color: #fff;
+  width: 375px;
+  height: 92px;
+  align-items:center;
+}
+
+.menuimg{
+	margin-right: 25px;
 }
 
 #logo {
   text-align: center;
   text-decoration: none;
-  font-family: "Roboto", sans-serif;
+  font-family: Poppins, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 24px;
   color: #fff;
-
-  /* Icons/Icon - Menu */
-  width: 24px;
-  height: 24px;
-
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+  margin-left: 25px;
 }
+
+
 
 .welcome {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 120px 24px;
   gap: 12px;
   position: absolute;
   width: 375px;
   height: 590px;
-  top: 92px;
+  background-color: #1C1A19;
 }
 
 .main-title {
   width: 327px;
   height: 124px;
-  font-family: 'Crete Round', sans-serif;
+  font-family: Crete Round, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 56px;
   line-height: 114%;
   letter-spacing: 0.37px;
   color: #ff6b00;
+  margin-left: 24px;
+  margin-top: 120px;
 
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  flex-grow: 0;
 }
 
 .sub-title {
@@ -78,11 +73,9 @@ body { min-width: 375px; }
   display: flex;
   align-items: center;
   color: #fff5e1;
+  margin-left: 24px;
+  margin-top: 10px;
 
-  /* Inside auto layout */
-  flex: none;
-  order: 1;
-  flex-grow: 0;
 }
 
 .info {
@@ -95,20 +88,28 @@ body { min-width: 375px; }
   font-size: 16px;
   line-height: 150%;
   color: #fff;
+  margin-left: 24px;
+  margin-top:10px;
+}
 
-  /* Inside auto layout */
-  flex: none;
-  order: 2;
-  flex-grow: 0;
+.bg-img{
+	float:right;
+	margin-right:-24px;
+	margin-top: -110px;
 }
 
 .contact-links {
-  display: flex;
   list-style-type: none;
+  margin-left: 14px;
+  margin-top: -220px;
+  height: 40px;
+  width: 200px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-#profilei {
-  padding: 5px;
+#profile {
   background-color: transparent;
 }
 
