--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 body { min-width: 375px; }
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -14,11 +15,11 @@ body { min-width: 375px; }
   color: #fff;
   width: 375px;
   height: 92px;
-  align-items:center;
+  align-items: center;
 }
 
-.menuimg{
-	margin-right: 25px;
+.menuimg {
+  margin-right: 25px;
 }
 
 #logo {
@@ -33,8 +34,6 @@ body { min-width: 375px; }
   margin-left: 25px;
 }
 
-
-
 .welcome {
   display: flex;
   flex-direction: column;
@@ -43,7 +42,7 @@ body { min-width: 375px; }
   position: absolute;
   width: 375px;
   height: 590px;
-  background-color: #1C1A19;
+  background-color: #1c1a19;
 }
 
 .main-title {
@@ -58,7 +57,6 @@ body { min-width: 375px; }
   color: #ff6b00;
   margin-left: 24px;
   margin-top: 120px;
-
 }
 
 .sub-title {
@@ -75,7 +73,6 @@ body { min-width: 375px; }
   color: #fff5e1;
   margin-left: 24px;
   margin-top: 10px;
-
 }
 
 .info {
@@ -89,13 +86,13 @@ body { min-width: 375px; }
   line-height: 150%;
   color: #fff;
   margin-left: 24px;
-  margin-top:10px;
+  margin-top: 10px;
 }
 
-.bg-img{
-	float:right;
-	margin-right:-24px;
-	margin-top: -110px;
+.bg-img {
+  float: right;
+  margin-right: -24px;
+  margin-top: -110px;
 }
 
 .contact-links {
