--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@
 
 body { min-width: 375px; }
 
+.content{
+  position: absolute;
+  width: 375px;
+  height: 6752px;
+  display: flex;
+  height: 100vh;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -112,4 +120,285 @@ body { min-width: 375px; }
 
 #profile:hover {
   background-color: #3c3a39;
+}
+
+.portfolio {
+  /* Recent Works */
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  gap: 80px;
+  width: 375px;
+  height: 3455px;
+  left: 0px;
+  margin-top: 682px;   
+}
+.recent-work {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
+}
+.title {
+  /* Title */
+  width: 327px;
+  height: 83px;
+  margin-top: 20px;
+  font-family: 'Crete Round';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 52px;
+  /* or 130% */
+  
+  display: flex;
+  align-items: center;    
+  color: #1c1a19;  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.custom-hr {
+  /* Vector */
+  
+  margin-top: 24px;
+  width: 327px;
+  height: 0px;
+  border: 1px solid #212121;  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.custom-img {
+  /* Img Placeholder */
+  width: 327px;
+  height: 237px;
+  margin-top: 80px;
+  
+  background: url(images/recent_works/hm_img.png);
+  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 0;
+  flex-grow: 0;  
+}
+.s-title {
+  /*sub-title post*/
+
+  width: 327px;
+  height: 36px;
+  margin-top: 24px;  
+  font-family: 'Crete Round';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 44px;
+  /* or 138% */
+  
+  display: flex;
+  align-items: center;
+  
+  /* Neutrals/N900 */
+  
+  color: #091E42;
+  
+  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 0;
+  flex-grow: 0;  
+}
+.paragraph {
+  /* Supporting Text */
+
+  width: 327px;
+  height: 147px;
+  margin-top: 12px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* or 150% */
+  
+  /* Neutrals/N900 */
+  
+  color: #091E42;
+  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 1;
+  flex-grow: 0;  
+}
+.stack {
+  display: flex;
+  list-style: none;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;  
+}
+.s-button {
+  /* Button / Enable */
+
+  /* Auto layout */
+  align-self: flex-start;
+  padding: 12px;
+  gap: 10px;
+   
+  width: 124px;
+  height: 48px;
+   
+  background: #ff6b00;
+  border: none; /* Remove the border */
+  outline: none; /* Remove the outline */
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  text-align: center;
+  color: #fff;
+
+  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 3;
+  flex-grow: 0;
+  
+}
+.art-data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
+  position: relative;
+  background-image: url("./images/recent_works/bg-img.png");
+  /*background-size: cover;*/
+  /*background-position: center;*/
+}
+.overlay-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* Additional styles for the overlay content */
+}
+.title-post {
+  /* Title Post */
+
+  width: 295px;
+  height: 81px;
+  
+  font-family: 'Crete Round';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 44px;
+  /* or 138% */  
+  
+  /* Neutrals/N0 */
+  
+  color: #fff;  
+  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 0;
+  flex-grow: 0;  
+}
+.description{
+  /* Supporting Text */
+
+  width: 301px;
+  height: 99px;
+  margin-top: 12px;
+  
+  /* Theme 3 / Body Reguler 2 */
+  
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* or 150% */
+  
+  
+  color: #FFFFFF;
+  
+  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+.stack-2 {
+  list-style: none;
+  display: flex;
+  /* Auto layout */
+   
+  width: 247px;
+  height: 40px;
+  margin-top: 12px;  
+  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+  
+}
+
+.bg-img2 {
+  /* Img Placeholder */
+
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url('images/recent_works/bg-img.png');
+}
+.b-button {
+  display: block;
+  margin: auto;
+  position: absolute;
+  width: 327px;
+  height: 48px;
+  left: 0px;
+  bottom: 0px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  text-align: center;
+  color: #fff;
+  border: none; /* Remove the border */
+  outline: none; /* Remove the outline */
+  background-color: transparent; /* Set background color as transparent */
+  padding: 0; /* Remove padding */
+  cursor: pointer; /* Add a cursor pointer for interaction */  
+  /* Theme 3 / Primary 1 */
+  
+  background: #ff6b00;  
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  /*height: 100%;*/
+}
+
+.grid-item {
+  border: 0px solid #ff6b00;
 }
